# bea-sea-event-manager

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: test_ci.yml
.nginx/: Readme.md  docker-compose.yml  nginx.conf
backend/: .gitignore  Makefile  Readme.md  config.py  pyproject.toml
backend/src/: entities.py  exceptions.py  main.py  routes.py  usecases.py
backend/src/io/: demo_data.py  repositories.py
backend/tests/: conftest.py  test_live.py
backend/tests/repositories/: test_sea_events.py
backend/tests/routes/: test_retrieve_sea_event_by_uuid.py  test_retrieve_sea_events.py
backend/tests/usecases/: test_get_sea_events.py
entry_helper/: admin.py  apps.py  internals.py  models.py  urls.py  views.py
entry_helper/migrations/: 0001_initial.py  0002_rename_national_id_report_registration_number.py  0003_rename_name_report_ship_name.py  0004_report_status.py
entry_helper/templates/entry_helper/: index.html  report_list.html
frontend/: README.md  deploy.sh  package-lock.json  package.json  tsconfig.json  vue.config.js
frontend/public/: index.html  shipAndEventData_1.json  sitrep.json
frontend/src/: App.vue  main.ts  mod.ts
frontend/src/components/: CancelButton.vue  CustomInput.vue  DataSelector.vue  EditFormButton.vue  FooterComponent.vue  HeaderComponent.vue  (+8 more)
sea_events_manager/: manage.py
sea_events_manager/data_scripts/: setup_bea_fake_data.py
sea_events_manager/entry_helper/: internals.py  tests.py  urls.py  views.py
sea_events_manager/sea_events_manager/: asgi.py  settings.py  urls.py  wsgi.py
src/: manage.py
src/data_scripts/: setup_bea_fake_data.py
src/entry_helper/: admin.py  core.py  emcip_service.py  exceptions.py  import_service.py  models.py  urls.py  views.py
src/sea_events_manager/: asgi.py  settings.py  urls.py  wsgi.py
(+210 files in other folders)
