[tool.poetry]
name = "django-sea-events-manager"
version = "0.1.0"
description = ""
authors = ["Philippe GALVAN <git.philippeG@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
django-dsfr = "^0.7.3"
pandas = "^1.4.2"
environs = "^9.5.0"
SQLAlchemy = "^1.4.37"
cachetools = "^5.2.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
