[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Philippe GALVAN <git.philippeG@outlook.com>"]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
requests = "^2.27.1"
coverage = "^6.3.2"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
